--- a/CucumberFramework/.project
+++ b/CucumberFramework/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>PimCucumberFramework2</name>
+	<name>PimCucumberFramework</name>
 	<comment></comment>
 	<projects>
 	</projects>
