--- a/CucumberFramework/pom.xml
+++ b/CucumberFramework/pom.xml
@@ -14,6 +14,7 @@
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 	</properties>
 
+	
 	<build>
 		<pluginManagement>
 			<plugins>
@@ -25,10 +26,18 @@
 						<source>1.8</source>
 						<target>1.8</target>
 						<fork>true</fork>
-						<!--<executable>C:\Program Files\Java\jdk1.8.0_121\bin\javac.exe</executable>-->
+						<!--<executable>C:\Program Files\Java\jdk1.8.0_121\bin\javac.exe</executable> -->
 						<executable>${env.JAVA_HOME}\bin\javac.exe</executable>
 					</configuration>
 				</plugin>
+				<plugin>
+					<groupId>org.codehaus.mojo</groupId>
+					<artifactId>exec-maven-plugin</artifactId>
+					<configuration>
+						<mainClass>BuyAGiftFramework.utilities.SendEmailFile</mainClass>
+					</configuration>
+				</plugin>
+
 				<plugin>
 					<groupId>org.apache.maven.plugins</groupId>
 					<artifactId>maven-surefire-plugin</artifactId>
@@ -45,21 +54,12 @@
 		</pluginManagement>
 	</build>
 
-	<reporting>
-		<plugins>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-surefire-report-plugin</artifactId>
-				<version>2.19.1</version>
-			</plugin>
-		</plugins>
-	</reporting>
-
 	<dependencies>
+		<!-- https://mvnrepository.com/artifact/org.seleniumhq.selenium/selenium-java -->
 		<dependency>
-			<groupId>org.seleniumhq.selenium</groupId>
-			<artifactId>selenium-java</artifactId>
-			<version>3.6.0</version>
+		    <groupId>org.seleniumhq.selenium</groupId>
+		    <artifactId>selenium-java</artifactId>
+		    <version>3.11.0</version>
 		</dependency>
 		<dependency>
 			<groupId>junit</groupId>
@@ -144,9 +144,14 @@
 
 		<!-- Extent Reports -->
 		<dependency>
+			<groupId>com.vimalselvam</groupId>
+			<artifactId>cucumber-extentsreport</artifactId>
+			<version>3.0.2</version>
+		</dependency>
+		<dependency>
 			<groupId>com.aventstack</groupId>
 			<artifactId>extentreports</artifactId>
-			<version>3.0.5</version>
+			<version>3.1.2</version>
 		</dependency>
 
 		<!-- https://mvnrepository.com/artifact/org.freemarker/freemarker -->
@@ -161,11 +166,6 @@
 			<artifactId>cucumber-reporting</artifactId>
 			<version>3.6.0</version>
 		</dependency>
-		<dependency>
-			<groupId>com.vimalselvam</groupId>
-			<artifactId>cucumber-extentsreport</artifactId>
-			<version>2.0.4</version>
-		</dependency>
 
 		<!-- https://mvnrepository.com/artifact/info.cukes/cucumber-jvm-deps -->
 		<dependency>
@@ -174,5 +174,11 @@
 			<version>1.0.5</version>
 		</dependency>
 		
-	</dependencies>
+		<!-- https://mvnrepository.com/artifact/commons-io/commons-io -->
+		<dependency>
+		    <groupId>commons-io</groupId>
+		    <artifactId>commons-io</artifactId>
+		    <version>2.6</version>
+		</dependency>
+</dependencies>
 </project>
